--- a/app/src/main/res/layout/fragment_main_feed.xml
+++ b/app/src/main/res/layout/fragment_main_feed.xml
@@ -1,12 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/main_feed"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-    </androidx.recyclerview.widget.RecyclerView>
-
+        <TextView
+            android:id="@+id/main_feed_header"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:fontFamily="@font/sonnenstrahl_ausgezeichnet"
+            android:gravity="center"
+            android:text="@string/app_heading"
+            android:textColor="@color/black"
+            android:textSize="32sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/main_feed_list"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@id/main_feed_header"
+            app:layout_constraintBottom_toBottomOf="parent" />
+    </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
