--- a/app/src/main/res/layout/fragment_main_feed.xml
+++ b/app/src/main/res/layout/fragment_main_feed.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -16,10 +16,14 @@
         android:textSize="32sp"
         app:layout_constraintTop_toTopOf="parent" />
 
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/main_feed_section_list"
-        android:layout_width="match_parent"
+        app:layout_constraintWidth_percent="0.90"
         android:layout_height="wrap_content"
         tools:listitem="@layout/list_item_main_feed_section"
-        app:layout_constraintTop_toBottomOf="@id/main_feed_header" />
+        app:layout_constraintTop_toBottomOf="@id/main_feed_header"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_width="0sp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
