--- a/app/src/main/res/layout/list_item_main_feed_section.xml
+++ b/app/src/main/res/layout/list_item_main_feed_section.xml
@@ -2,18 +2,44 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="13dp"
+    android:layout_marginBottom="13dp"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <View
+        android:id="@+id/section_top_divider"
+        app:layout_constraintBottom_toTopOf="@id/section_title"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        style="@style/Divider" />
+
 
     <TextView
         android:id="@+id/section_title"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:layout_marginLeft="2dp"
+        android:layout_marginStart="2dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp" />
+
+    <View
+        android:id="@+id/section_bottom_divider"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/section_title"
+        style="@style/Divider" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/main_feed_article_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/section_title"
-        tools:listitem="@layout/list_item_main_feed_article" />
+        tools:listitem="@layout/list_item_main_feed_article"
+        android:layout_marginLeft="2dp"
+        android:layout_marginStart="2dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
