checkpoint for integrating page adapter

--- a/app/src/main/res/layout/list_item_main_feed_article.xml
+++ b/app/src/main/res/layout/list_item_main_feed_article.xml
@@ -2,28 +2,40 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="12dp"
+    android:layout_marginTop="20dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
         android:id="@+id/article_title"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
+        android:textSize="17sp"
         android:textColor="@color/black"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/article_image"
+        android:layout_marginRight="10dp"
+        android:layout_marginEnd="10dp" />
 
     <TextView
         android:id="@+id/article_author"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textSize="12sp"
-        android:textColor="@color/black"
-        app:layout_constraintTop_toBottomOf="@id/article_title"/>
+        android:textAllCaps="true"
+        android:textColor="@color/bylineText"
+        app:layout_constraintTop_toBottomOf="@id/article_title"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="@id/article_title"
+        android:layout_marginTop="5dp" />
 
     <ImageView
         android:id="@+id/article_image"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:contentDescription="Image Representing Article" />
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintHeight_min="80dp"
+        app:layout_constraintHeight_max="110dp"
+        app:layout_constraintWidth_min="115dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
