--- a/app/src/main/res/layout/list_item_main_feed_section.xml
+++ b/app/src/main/res/layout/list_item_main_feed_section.xml
@@ -2,44 +2,62 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="13dp"
-    android:layout_marginBottom="13dp"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <View
         android:id="@+id/section_top_divider"
-        app:layout_constraintBottom_toTopOf="@id/section_title"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        style="@style/Divider" />
-
+        app:layout_constraintTop_toTopOf="parent"
+        style="@style/thickDivider" />
 
     <TextView
         android:id="@+id/section_title"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:textColor="@color/black"
-        android:textSize="20sp"
-        android:layout_marginLeft="2dp"
-        android:layout_marginStart="2dp"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp" />
+        app:layout_constraintTop_toBottomOf="@id/section_top_divider"
+        android:textSize="16sp"
+        android:textAllCaps="true" />
 
     <View
         android:id="@+id/section_bottom_divider"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/section_title"
-        style="@style/Divider" />
+        style="@style/thinDivider" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/main_feed_article_list"
+    <TextView
+        android:id="@+id/section_featured_article_title"
+        android:textStyle="bold"
+        android:textSize="21sp"
+        android:textColor="@color/black"
+        app:layout_constraintTop_toBottomOf="@id/section_bottom_divider"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/section_featured_author"
+        app:layout_constraintTop_toBottomOf="@id/section_featured_article_title"
+        android:textSize="12sp"
+        android:textAllCaps="true"
+        android:textColor="@color/bylineText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <ImageView
+        android:id="@+id/section_featured_image"
+        app:layout_constraintTop_toBottomOf="@id/section_featured_author"
+        android:layout_width="match_parent"
+        android:layout_height="250sp" />
+
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/main_feed_section_pager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/section_title"
-        tools:listitem="@layout/list_item_main_feed_article"
-        android:layout_marginLeft="2dp"
-        android:layout_marginStart="2dp" />
+        app:layout_constraintTop_toBottomOf="@id/section_featured_image" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
