--- a/app/src/main/res/layout/main_feed_featured_article.xml
+++ b/app/src/main/res/layout/main_feed_featured_article.xml
@@ -1,30 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <ImageView
         android:id="@+id/featured_article_image"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="300dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <TextView
         android:id="@+id/featured_article_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/black"
-        android:textSize="20sp"
-        android:layout_marginLeft="2dp"
-        android:layout_marginStart="2dp"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
+        android:textSize="21sp"
+        android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/featured_article_image"
-        android:textStyle="bold" />
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
+        android:paddingTop="10dp" />
 
     <TextView
         android:id="@+id/featured_article_author"
-        app:layout_constraintTop_toBottomOf="@id/featured_article_title"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textColor="@color/bylineText"
+        android:textSize="12sp"
+        app:layout_constraintTop_toBottomOf="@id/featured_article_title"
+        android:textAllCaps="true"
+        android:paddingTop="5dp"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
+        android:paddingBottom="5dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
