--- a/app/src/main/res/navigation/nav_main_feed.xml
+++ b/app/src/main/res/navigation/nav_main_feed.xml
@@ -7,6 +7,5 @@
     <fragment
         android:id="@+id/main_feed_fragment"
         android:name="com.cornell.daily.sun.MainFeedFragment"
-        tools:layout="@layout/fragment_main_feed">
-    </fragment>
+        tools:layout="@layout/fragment_main_feed"></fragment>
 </navigation>
