--- a/app/src/main/res/layout/list_item_main_feed_article.xml
+++ b/app/src/main/res/layout/list_item_main_feed_article.xml
@@ -3,6 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="20dp"
+    android:paddingBottom="20dp"
+    android:paddingLeft="20dp"
+    android:paddingRight="20dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
@@ -33,9 +36,9 @@
         android:id="@+id/article_image"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintHeight_min="80dp"
+        app:layout_constraintHeight_min="90dp"
         app:layout_constraintHeight_max="110dp"
-        app:layout_constraintWidth_min="115dp"
+        app:layout_constraintWidth_min="130dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
