--- a/app/src/main/res/layout/list_item_main_feed_section.xml
+++ b/app/src/main/res/layout/list_item_main_feed_section.xml
@@ -16,6 +16,9 @@
         android:id="@+id/section_title"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:paddingLeft="20dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
         android:textColor="@color/black"
         app:layout_constraintTop_toBottomOf="@id/section_top_divider"
         android:textSize="16sp"
@@ -34,6 +37,9 @@
         android:textSize="21sp"
         android:textColor="@color/black"
         app:layout_constraintTop_toBottomOf="@id/section_bottom_divider"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:paddingTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
@@ -41,6 +47,10 @@
         android:id="@+id/section_featured_author"
         app:layout_constraintTop_toBottomOf="@id/section_featured_article_title"
         android:textSize="12sp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
         android:textAllCaps="true"
         android:textColor="@color/bylineText"
         android:layout_width="match_parent"
