--- a/app/src/main/res/layout/main_feed_featured_article.xml
+++ b/app/src/main/res/layout/main_feed_featured_article.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:paddingBottom="20dp">
 
     <ImageView
         android:id="@+id/featured_article_image"
@@ -21,8 +22,8 @@
         android:textSize="21sp"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/featured_article_image"
-        android:paddingLeft="15dp"
-        android:paddingRight="15dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
         android:paddingTop="10dp" />
 
     <TextView
@@ -34,7 +35,6 @@
         app:layout_constraintTop_toBottomOf="@id/featured_article_title"
         android:textAllCaps="true"
         android:paddingTop="5dp"
-        android:paddingLeft="15dp"
-        android:paddingRight="15dp"
-        android:paddingBottom="5dp" />
+        android:paddingRight="20dp"
+        android:paddingLeft="20dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
