--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:defaultNavHost="true"
-            app:navGraph="@navigation/nav_main_feed" />
+            app:navGraph="@navigation/nav_main" />
     </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
