--- a/app/src/main/res/layout/list_item_main_feed_article.xml
+++ b/app/src/main/res/layout/list_item_main_feed_article.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="20dp"
-    android:paddingBottom="20dp"
+    android:paddingBottom="15dp"
     android:paddingLeft="20dp"
     android:paddingRight="20dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -13,6 +13,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textSize="17sp"
+        android:ellipsize="end"
+        android:maxLines="4"
         android:textColor="@color/black"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -26,7 +28,7 @@
         android:layout_height="wrap_content"
         android:textSize="12sp"
         android:textAllCaps="true"
-        android:textColor="@color/bylineText"
+        android:textColor="@color/darkGrey"
         app:layout_constraintTop_toBottomOf="@id/article_title"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="@id/article_title"
@@ -36,7 +38,7 @@
         android:id="@+id/article_image"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintHeight_min="90dp"
+        app:layout_constraintHeight_min="95dp"
         app:layout_constraintHeight_max="110dp"
         app:layout_constraintWidth_min="130dp"
         app:layout_constraintRight_toRightOf="parent"
