--- a/app/src/main/res/layout/main_feed_featured_article.xml
+++ b/app/src/main/res/layout/main_feed_featured_article.xml
@@ -30,7 +30,7 @@
         android:id="@+id/featured_article_author"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/bylineText"
+        android:textColor="@color/darkGrey"
         android:textSize="12sp"
         app:layout_constraintTop_toBottomOf="@id/featured_article_title"
         android:textAllCaps="true"
