--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,7 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
-    <color name="bylineText">#767272</color>
+    <color name="darkGrey">#767272</color>
+    <color name="crimson">#B41A19</color>
+    <color name="lightGrey">#C4C4C4</color>
 </resources>
