--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -7,4 +7,8 @@
         android:id="@+id/main_feed_fragment"
         android:name="com.cornell.daily.sun.MainFeedFragment"
         tools:layout="@layout/main_feed_fragment" />
+    <fragment
+        android:id="@+id/sections_fragment"
+        android:name="com.cornell.daily.sun.MainFeedFragment"
+        tools:layout="@layout/main_feed_fragment" />
 </navigation>
