--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="darkGrey">#767272</color>
     <color name="crimson">#B41A19</color>
     <color name="lightGrey">#C4C4C4</color>
+    <color name="transparent">#00ff0000</color>
 </resources>
