--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -6,7 +6,19 @@
     <fragment
         android:id="@+id/main_feed_fragment"
         android:name="com.cornell.daily.sun.MainFeedFragment"
-        tools:layout="@layout/main_feed_fragment" />
+        tools:layout="@layout/main_feed_fragment">
+        <action
+            android:id="@+id/main_feed_to_post"
+            app:destination="@id/post_fragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/post_fragment"
+        android:name="com.cornell.daily.sun.PostFragment"
+        tools:layout="@layout/post_fragment">
+        <action
+            android:id="@+id/post_to_main_feed"
+            app:destination="@id/main_feed_fragment" />
+    </fragment>
     <fragment
         android:id="@+id/sections_fragment"
         android:name="com.cornell.daily.sun.MainFeedFragment"
