--- a/app/src/main/res/layout/list_item_main_feed_article.xml
+++ b/app/src/main/res/layout/list_item_main_feed_article.xml
@@ -9,7 +9,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
-        android:id="@+id/article_title"
+        android:id="@+id/post_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textSize="17sp"
@@ -18,24 +18,24 @@
         android:textColor="@color/black"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/article_image"
+        app:layout_constraintRight_toLeftOf="@id/post_image"
         android:layout_marginRight="10dp"
         android:layout_marginEnd="10dp" />
 
     <TextView
-        android:id="@+id/article_author"
+        android:id="@+id/post_author"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textSize="12sp"
         android:textAllCaps="true"
         android:textColor="@color/darkGrey"
-        app:layout_constraintTop_toBottomOf="@id/article_title"
+        app:layout_constraintTop_toBottomOf="@id/post_title"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="@id/article_title"
+        app:layout_constraintRight_toRightOf="@id/post_title"
         android:layout_marginTop="5dp" />
 
     <ImageView
-        android:id="@+id/article_image"
+        android:id="@+id/post_image"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintHeight_min="95dp"
