--- a/app/src/main/res/layout/main_feed_featured_article.xml
+++ b/app/src/main/res/layout/main_feed_featured_article.xml
@@ -7,7 +7,7 @@
     android:paddingBottom="20dp">
 
     <ImageView
-        android:id="@+id/featured_article_image"
+        android:id="@+id/featured_post_image"
         android:layout_width="match_parent"
         android:layout_height="300dp"
         app:layout_constraintTop_toTopOf="parent"
@@ -15,24 +15,24 @@
         app:layout_constraintRight_toRightOf="parent" />
 
     <TextView
-        android:id="@+id/featured_article_title"
+        android:id="@+id/featured_post_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/black"
         android:textSize="21sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@id/featured_article_image"
+        app:layout_constraintTop_toBottomOf="@id/featured_post_image"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
         android:paddingTop="10dp" />
 
     <TextView
-        android:id="@+id/featured_article_author"
+        android:id="@+id/featured_post_author"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/darkGrey"
         android:textSize="12sp"
-        app:layout_constraintTop_toBottomOf="@id/featured_article_title"
+        app:layout_constraintTop_toBottomOf="@id/featured_post_title"
         android:textAllCaps="true"
         android:paddingTop="5dp"
         android:paddingRight="20dp"
