--- a/app/src/main/res/color/bottom_nav_label_color_selector.xml
+++ b/app/src/main/res/color/bottom_nav_label_color_selector.xml
@@ -2,4 +2,5 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:color="@color/crimson" android:state_selected="true" />
     <item android:color="@color/black" />
+    <item android:color="@color/white" />
 </selector>
