--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -10,5 +10,5 @@
     <fragment
         android:id="@+id/sections_fragment"
         android:name="com.cornell.daily.sun.SectionsFragment"
-        tools:layout="@layout/sections" />
+        tools:layout="@layout/sections_fragment" />
 </navigation>
