--- a/app/src/main/res/layout/list_item_post_paragraph.xml
+++ b/app/src/main/res/layout/list_item_post_paragraph.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="20sp"
+        android:lineSpacingMultiplier="1.2"
         android:textColor="@color/black"
         android:paddingLeft="16sp"
         android:paddingRight="16sp"
