--- a/app/src/main/res/layout/list_item_post_suggested_section.xml
+++ b/app/src/main/res/layout/list_item_post_suggested_section.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:paddingLeft="16sp"
     android:paddingRight="16sp"
     android:layout_height="wrap_content">
+
     <TextView
         android:id="@+id/suggested_posts_title"
         android:layout_width="match_parent"
@@ -14,6 +15,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         android:text="@string/post_suggested_section_title" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:layout_marginTop="20sp"
         android:id="@+id/suggested_posts_list"
