--- a/app/src/main/res/layout/list_item_post_suggested_section_cell.xml
+++ b/app/src/main/res/layout/list_item_post_suggested_section_cell.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_marginBottom="15sp"
     android:layout_height="wrap_content">
+
     <ImageView
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -15,6 +15,7 @@
         app:layout_constraintHeight_min="100dp"
         app:layout_constraintHeight_max="110dp"
         app:layout_constraintWidth_min="100dp" />
+
     <TextView
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -27,8 +28,9 @@
         android:layout_height="wrap_content"
         android:ellipsize="end"
         android:maxLines="3"
-        android:paddingStart="5sp"
+        android:paddingStart="10sp"
         tools:ignore="RtlSymmetry" />
+
     <TextView
         app:layout_constraintTop_toBottomOf="@id/suggested_post_title"
         app:layout_constraintLeft_toRightOf="@id/suggested_post_image"
@@ -39,7 +41,7 @@
         android:id="@+id/suggested_post_author"
         android:layout_width="0sp"
         android:layout_height="wrap_content"
-        android:paddingStart="5sp"
+        android:paddingStart="10sp"
         android:maxLines="1"
         android:ellipsize="end"
         tools:ignore="RtlSymmetry" />
