--- a/app/src/main/res/layout/list_item_post_inline_image.xml
+++ b/app/src/main/res/layout/list_item_post_inline_image.xml
@@ -3,8 +3,8 @@
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="30dp"
-    >
+    android:layout_marginBottom="30dp">
+
     <ImageView
         android:id="@+id/post_view_inline_image"
         app:layout_constraintTop_toTopOf="parent"
