--- a/app/src/main/res/layout/app_header.xml
+++ b/app/src/main/res/layout/app_header.xml
@@ -18,9 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="@string/app_heading"
-            android:textColor="@color/black"
-            android:textSize="32sp" />
+            android:textColor="@color/black" />
 
         <ImageView
             android:id="@+id/app_header_search"
@@ -32,7 +30,8 @@
             android:background="@drawable/search_icon_background_light"
             android:padding="8dp"
             android:layout_marginRight="10dp"
-            android:layout_marginEnd="10dp" />
+            android:layout_marginEnd="10dp"
+            android:contentDescription="@string/app_header_search_content_description" />
     </androidx.appcompat.widget.Toolbar>
 
     <View
