--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -10,6 +10,9 @@
         <action
             android:id="@+id/main_feed_to_post"
             app:destination="@id/post_fragment" />
+        <action
+            android:id="@+id/main_feed_to_search"
+            app:destination="@id/search_fragment" />
     </fragment>
     <fragment
         android:id="@+id/post_fragment"
@@ -37,5 +40,13 @@
         <action
             android:id="@+id/sections_to_section_feed"
             app:destination="@id/feed_fragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/search_fragment"
+        android:name="com.cornell.daily.sun.SearchFragment"
+        tools:layout="@layout/search_fragment">
+        <action
+            android:id="@+id/search_to_post"
+            app:destination="@id/post_fragment" />
     </fragment>
 </navigation>
