--- a/app/src/main/res/layout/app_header.xml
+++ b/app/src/main/res/layout/app_header.xml
@@ -32,6 +32,20 @@
             android:layout_marginRight="10dp"
             android:layout_marginEnd="10dp"
             android:contentDescription="@string/app_header_search_content_description" />
+
+        <EditText
+            android:id="@+id/search_box"
+            android:layout_width="match_parent"
+            android:layout_height="60sp"
+            android:autofillHints="search"
+            android:drawableLeft="@drawable/search_icon_light_small"
+            app:layout_constraintTop_toBottomOf="@id/app_header_title"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:inputType="text"
+            android:imeOptions="actionSend"
+            android:hint="@string/search_box_hint"
+            android:drawablePadding="10dp"
+            android:drawableStart="@drawable/search_icon_light_small" />
     </androidx.appcompat.widget.Toolbar>
 
     <View
