--- a/app/src/main/res/layout/list_item_feed_post.xml
+++ b/app/src/main/res/layout/list_item_feed_post.xml
@@ -8,15 +8,12 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        style="@style/veryThickDarkDivider" />
+        style="@style/thickDarkDivider" />
 
     <TextView
         app:layout_constraintTop_toTopOf="parent"
         android:id="@+id/feed_post_time_stamp"
-        android:paddingTop="18dp"
-        android:paddingBottom="10dp"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
+        style="@style/articleCellHeaderPadding"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
