--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="sections_recycler_view_cell_padding">15dp</dimen>
     <dimen name="main_feed_header_text_size">12sp</dimen>
     <dimen name="regular_header_text_size">8sp</dimen>
+    <dimen name="search_box_icon_size">32dp</dimen>
 </resources>
