--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar"></style>
 
@@ -14,10 +14,17 @@
         <item name="android:background">#F0F0F0</item>
     </style>
 
-    <style name="veryThickDarkDivider">
+    <style name="thickDarkDivider">
         <item name="android:layout_width">0dp</item>
-        <item name="android:layout_height">8dp</item>
+        <item name="android:layout_height">5dp</item>
         <item name="android:background">#E5E5E5</item>
+    </style>
+
+    <style name="articleCellHeaderPadding">
+        <item name="android:paddingTop">10dp</item>
+        <item name="android:paddingBottom">10dp</item>
+        <item name="android:paddingLeft">20dp</item>
+        <item name="android:paddingRight">20dp</item>
     </style>
 
 </resources>
