--- a/app/src/main/res/layout/list_item_sections_cell.xml
+++ b/app/src/main/res/layout/list_item_sections_cell.xml
@@ -12,7 +12,7 @@
     android:focusable="true">
 
     <TextView
-        android:id="@+id/text_view"
+        android:id="@+id/list_item_sections_text_view"
         android:textColor="@color/sections_textview_color"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -25,7 +25,7 @@
         tools:ignore="RtlSymmetry" />
 
     <ImageView
-        android:id="@+id/icon"
+        android:id="@+id/list_item_sections_icon"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginRight="16dp"
