--- a/app/src/main/res/layout/settings_subscribe_fragment.xml
+++ b/app/src/main/res/layout/settings_subscribe_fragment.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center|center_horizontal"
-        android:text="Daily Newsletters"
+        android:text="@string/newsletters_heading"
         android:textColor="@color/black"
         android:textSize="36sp"
         android:textStyle="bold"
