--- a/app/src/main/res/layout/settings_contact_fragment.xml
+++ b/app/src/main/res/layout/settings_contact_fragment.xml
@@ -13,7 +13,7 @@
         android:layout_marginLeft="30dp"
         android:layout_marginTop="15dp"
         android:gravity="center|center_horizontal"
-        android:text="Contact us"
+        android:text="@string/contact_heading"
         android:textColor="@color/black"
         android:textSize="36sp"
         android:textStyle="bold"
